# ing2

./: .gitignore  README.md  angular.json  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  todo.txt
backend/: settings.py  urls.py
main/: forms.py  models.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_remove_pub_uuid_pub_id_alter_pub_photos_and_more.py  0002_rename_ispaused_pub_is_paused.py  0003_alter_user_options_alter_user_managers_and_more.py  0003_employee_name_user_name.py  0004_remove_user_dni_alter_user_username.py  0004_user_valoracion.py  0005_alter_user_email_alter_user_username.py  0005_rename_valoracion_user_rating.py  0006_remove_user_is_employee.py  0007_alter_pub_desired.py  0008_tradeproposal_delete_admin_alter_user_date_and_more.py  0009_alter_user_date.py  0010_alter_user_date.py  0011_alter_user_date.py  0012_alter_user_date.py  0013_tradeproposal_date.py  0014_remove_tradeproposal_date.py  0015_delete_tradeproposal.py  0016_tradeproposal.py  0017_alter_user_email.py  0018_photo_delete_image_remove_pub_photos_photo_pub.py  0019_tradeproposal_suc.py  0020_tradeproposal_date_venta.py  0021_alter_tradeproposal_date.py  0022_alter_tradeproposal_date.py  0023_alter_tradeproposal_status.py  0024_tradeproposal_code.py  0025_rename_venta_sales_alter_tradeproposal_status.py  0026_adsimage.py  0027_comment.py  0028_banner_delete_adsimage.py  0029_rating.py  0030_tradeproposal_proposer_rate_and_more.py  0031_rename_proposer_rate_tradeproposal_proposer_rated_and_more.py  (+3 more)
src/: index.html  styles.css
(+181 files in other folders)
